--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
 
     "http": "^0.0.1-security",
 
+    "ioredis": "^5.4.2",
+
     "jsonwebtoken": "^9.0.2",
 
     "mongoose": "^8.9.5",
 
     "nodemon": "^3.1.9",
+
+    "redis": "^4.7.0",
 
     "socket.io": "^4.8.1",
 
